# opencv-exercise

./: .gitignore  README.md  gitignore
L1H1/: CMakeLists.txt  README.md
L1H1/evi1ran/: L1H1.py
L1H1/folder/: fig1.pptx
L1H1/question/: L1H1.aux
L1H1/src/: L1H1.cpp  L1H1.m  L1H1.py
L1H2/: CMakeLists.txt  README.md  suggests.txt
L1H2/src/: L1H2.cpp  L1H2.m  L1H2.py  edge.cpp  inRange.cpp  split.cpp
L1H3/: CMakeLists.txt  README.md
L1H3/src/: L1H3.cpp  L1H3.py  split.cpp
L1T1/: README.md
L1T1/src/: L1T1.cpp  L1T1.m  L1T1.py  oe.py  self.cpp
L2H1/: CMakeLists.txt  README.md
L2H1/src/: L2H1.cpp  L2H1.py  test.py
L3H1/: CMakeLists.txt  README.md
L3H1/src/: L3H1.cpp
L3H2/: CMakeLists.txt
L3H2/src/: L3H2.cpp  L3H2.h  prev.hpp
docs/: conf.py  index.rst  make.bat
docs/modules/: Customization.rst  GattingStarted.rst  GettingStarted.rst  Installation.rst  LeaderBoard.rst
evi1ran/L1H1/src/: L1H1.py  L1H1_Dilate.py
evi1ran/L1H2/src/: L1H2.py
evi1ran/L1H3/src/: L1H3.py
evi1ran/L1T1/src/: L1T1.py
evi1ran/L2H1/src/: L2H1.py
frankabe/L1H1/src/: L1H1.m
frankabe/L1T1/: CMakeLists.txt
frankabe/L1T1/src/: l1t1.m
